# mondrian-map

./: .gitignore  .ruff.toml  DEVELOPMENT.md  ORGANIZATION_SUMMARY.md  QUICK_START.md  README.md  README_repro.md  REORGANIZATION_SUMMARY.md  STRUCTURE.md  cli.py  pyproject.toml  setup.py
apps/: streamlit_app.py
config/: gbm_case_study.yaml  requirements.txt
deployment/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  RELEASE_NOTES.md
docs/: DEVELOPMENT.md  README.md  SCRIPT_USAGE.md  SECURITY_FEATURES.md  SECURITY_UPDATE.md
docs/architecture/: ORGANIZATION_SUMMARY.md
docs/guides/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  FIGURE_NOTE.md  QUICK_START.md  SCRIPT_USAGE.md  SECURITY_FEATURES.md  SECURITY_UPDATE_DEPLOYMENT.md
docs/releases/: RELEASE_NOTES.md
mondrian_map/: __init__.py  cli.py  config.py  core.py  data_processing.py  degs.py  embeddings.py  io.py  pager_client.py  pathway_stats.py  pipeline.py  projection.py  visualization.py
notebooks/: PAGER.py  visualize_mondrian_map.ipynb
scripts/: reproduce_figures.sh
src/mondrian_map/: __init__.py  cli.py  config.py  core.py  data_processing.py  degs.py  embeddings.py  io.py  pager_client.py  pathway_stats.py  pipeline.py  projection.py  prompts.py  visualization.py
static/: interactive-pathway-embeddings.py
tests/: __init__.py  test_color_rules.py  test_core_rtree.py  test_core_snap.py  test_degs.py  test_e2e_case_study.py  test_embeddings.py  test_entities_schema.py  test_pager_client.py  test_partition_and_routing.py  test_pathway_stats.py  test_projection.py  test_prompts.py  test_routing_and_partitions.py  test_tsne_determinism.py  test_visualization.py  test_visualization_marker.py  test_wfc.py  utils_synth.py
