[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mondrian-map"
version = "1.2.0"
description = "Authentic implementation of Mondrian Maps for biological pathway visualization"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "AIMED Lab", email = "jakechen@uab.edu" } ]
requires-python = ">=3.8"
keywords = ["bioinformatics", "pathway", "visualization", "mondrian"]
dependencies = [
  "streamlit>=1.34.0",
  "plotly>=5.23.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.4.0",
  "scipy>=1.11.0",
  "pywikipathways>=0.0.2",
  "sentence-transformers>=2.2.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "h11>=0.14.0",
  "protobuf>=4.25.4",
  "jupyter_core>=5.7.2",
  "tornado>=6.4.0",
  "requests>=2.31.0",
  "urllib3>=1.26.18",
  "certifi>=2024.2.2",
  "cryptography>=42.0.0",
  "PyYAML>=6.0.1",
  "tqdm>=4.65.0",
  "kaleido>=0.2.1",
  "python-dotenv>=1.0.0",
  "validators>=0.22.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Home = "https://github.com/aimed-lab/mondrian-map"
Documentation = "https://github.com/aimed-lab/mondrian-map/docs"
Source = "https://github.com/aimed-lab/mondrian-map"
"Bug Tracker" = "https://github.com/aimed-lab/mondrian-map/issues"

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black>=23.0.0",
  "ruff>=0.14.0",
  "mypy>=1.0",
  "pre-commit>=3.0",
  "build",
  "twine",
]
viz = ["kaleido>=0.2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mondrian-map = "mondrian_map.cli:main"
